# gameplatform

./: .flake8  README.md  README.rst  game.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  snail_sprite.json
examples/: fill-grandient.py
screen/: screen.py
tickytacky/: scene.py  screen.py  sprite.py
tickytacky/screen/: screen.py
tools/: home.html  spriteOutput.html  sprite_maker.html  sprite_maker16.html  sprite_maker32.html
