[metadata]
name = tickytacky
description = Framework for game development with Pyglet
long_description = file: README.rst
author = JP Etcheber
author_email = jetcheber@gmail.com
license = GNU General Public License v3.0
home_page = https://github.com/numbertheory/tickytacky
project_urls =
    Repository = https://github.com/numbertheory/tickytacky
classifiers =
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Game Development
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
